src/styles/main.scss
@import 'scss/normalize';
@import 'scss/heights';
@import 'scss/widths';
@import 'scss/spacing';
@import 'scss/typography';
@import 'scss/colors';
@import 'scss/mixins';
body {
  background-color: $white;
  color: $black;
  font-family: $sans-serif;
}

.link {
  color: $blue;
  text-decoration: underline;
  @include dim(0.5);
}

.wrapper {
  max-width: $mw8;
  @include center;
  @include ph($s2);
  section {
    @include pv($s3);
  }
}

.main {
  @include ph($s2);
  padding-bottom: $s3;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  @include center;
  @include pv($s3);
}

.logo {
  width: $w3;
  height: auto;
  color: $blue;
  @include dim(0.5);
}

.site-title {
  text-decoration: none;
  @include dim(0.5);
  h1 {
    font-size: $f4;
    color: $black;
  }
}

//footer block
.contact__title {
  font-size: $f3;
}

.footer {
  display: flex;
  justify-content: start;
  align-items: center;
  padding-bottom: $s4;
  a {
    width: $w2;
    height: auto;
    padding-right: $s3;
    color: $blue;
    &:last-child {
      padding-right: 0;
    }
  }
}

.homepage {
  p {
    max-width: $mw7;
    line-height: $lh-copy;
    font-size: $f4;
  }
}

.homepage__title {
  font-size: $f1;
}

// Project section
.project-section {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-gap: $s4;
  @include medium {
    grid-template-columns: repeat(2, 1fr);
  }
  @include large {
    grid-template-columns: repeat(3, 1fr);
  }
}

.project-section__post--no-image {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.project-section a {
  color: $black;
  text-decoration: none;
  display: block;
}

.project-section__header {
  display: flex;
  justify-content: center;
  align-items: start;
  flex-direction: column;
  @include not-small {
    flex-direction: row;
    justify-content: start;
    align-items: center;
    grid-column: 1 / -1;
  }
}

.project-section__title {
  font-size: $f3;
}

.project-section__read-more {
  font-size: $f6;
  @include not-small {
    @include ph($s2);
  }
}

.project-section__title--standalone {
  grid-column: 1 / -1;
  font-size: $f2;
}

.project-section__post-container {
  line-height: $lh-copy;
  @include dim(0.8);
}

.project-section__image {
  width: 100%;
  max-width: 640px;
  margin-bottom: $s2;
}

.project-section__post-title {
  display: inline;
  color: lighten($black, 10%);
  font-size: $f5;
}

.project-section__post-description {
  font-size: $f5;
  color: lighten($black, 20%);
  padding-left: $s1;
}

// POSTS
.post {
  max-width: $measure-wide;
  @include center;
  padding: $s2;
  p,
  ul {
    line-height: $lh-copy;
  }
  a {
    color: $blue;
    text-decoration: underline;
    @include dim(0.5);
  }
}

.post__metadata {
  font-size: $f6;
  display: flex;
  flex-direction: column;
  span,
  time {
    padding-bottom: $s2;
  }
}

.post__title {
  font-size: $f3;
  font-weight: 800;
  line-height: $lh-title;
  @include ph($s2);
  text-align: center;
  max-width: $measure-wide;
  @include not-small {
    font-size: $f2;
  }
}

.post__link {
  display: flex;
  justify-content: center;
}

.post__link a {
  @include button($s2, $s3, $f6);
  margin-bottom: $s2;
}

.post__roles {
  padding-top: $s3;
  text-align: center;
  font-size: $f6;
}

.post__role {
  @include pv($s1);
  @include ph($s2);
  margin-left: $s2;
  border-radius: 9999px;
  font-size: $f7;
  color: $white;
  background-color: $blue;
}

.post__breakout {
  margin: 1em -100%;
  /* old browsers fallback */
  margin: 1em calc(50% - 50vw);
  max-width: $mw8;
  transform: translateX(calc(50vw - 50%));
  @include ph($s2);
}

.gatsby-highlight {
  margin: 1em -100%;
  /* old browsers fallback */
  margin: 1em calc(50% - 50vw);
  max-width: $mw7;
  transform: translateX(calc(50vw - 50%));
  @include ph($s2);
}

.post__image-grid {
  margin: 1em -100%;
  /* old browsers fallback */
  margin: 1em calc(50% - 50vw);
  max-width: $mw8;
  transform: translateX(calc(50vw - 50%));
  @include ph($s2);
  div {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 10px;
    span {
      width: 100%;
      max-width: 100% !important;
    }
  }
}

.post__iframe {
  position: relative;
  height: 0;
  overflow: hidden;
  padding-bottom: 56.25%;
  display: flex;
  justify-content: center;
  iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: none;
  }
}

.twitter-tweet {
  margin-left: auto;
  margin-right: auto;
}

.observable {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  svg {
    width: 100%;
    height: 100%;
  }
  input[type='button'] {
    @include button($s1, $s2, $f6);
    border: none;
  }
}

